# threatray-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  vulture_whitelist.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml  test-publish.yml
examples/: mcp-config.json
src/threatray_mcp/: README.md  __init__.py  __main__.py  config.py  errors.py  log.py  server.py
src/threatray_mcp/client/: __init__.py  _http.py  _jobs.py  _types.py  ai_analysis.py  analyses.py  capa.py  files.py  functions.py  samples.py  search.py  submissions.py
src/threatray_mcp/formatters/: __init__.py  _helpers.py  ai_analysis.py  analyses.py  capa.py  files.py  functions.py  samples.py  search.py  submissions.py
src/threatray_mcp/models/: __init__.py  ai_analysis.py  analyses.py  capa.py  common.py  files.py  functions.py  samples.py  search.py  submissions.py
src/threatray_mcp/tools/: __init__.py  _cache.py  _context.py  _format.py  ai_analysis.py  analyses.py  capa.py  files.py  functions.py  samples.py  search.py  submissions.py
tests/: dummies.py
tests/integration/: __init__.py  run_tests.py  test_all_tools_smoke.py  test_http_transport.py
tests/integration/tools/: test_ai_analysis.py  test_capa.py  test_files.py  test_functions.py  test_samples.py  test_search.py  test_submissions.py
tests/unit/: __init__.py  run_tests.py  test_cache.py  test_errors.py
tests/unit/client/: test_ai_analysis.py  test_analyses.py  test_capa.py  test_files.py  test_functions.py  test_http.py  test_jobs.py  test_samples.py  test_search.py  test_submissions.py
tests/unit/formatters/: test_ai_analysis.py  test_analyses.py  test_capa.py  test_files.py  test_functions.py  test_helpers.py  test_markdown_safety.py  test_samples.py  test_search.py  test_submissions.py
tests/unit/models/: test_ai_analysis.py  test_analyses.py  test_common.py  test_files.py  test_samples.py  test_search.py  test_submissions.py
