[project]
name = "threatray-mcp"
version = "1.0.0b1"
description = "MCP server for the Threatray malware analysis and threat intelligence platform"
authors = [{name = "Threatray", email = "operations@threatray.com"}]
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
keywords = ["mcp", "threatray", "malware", "threat-intelligence", "yara", "capa", "ioc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "fastmcp>=3,<4",
    "httpx~=0.27",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
]

[project.urls]
Homepage = "https://www.threatray.com"
Repository = "https://github.com/threatray/threatray-mcp"
Issues = "https://github.com/threatray/threatray-mcp/issues"
Documentation = "https://github.com/threatray/threatray-mcp#readme"
"Threatray API reference" = "https://docs.threatray.com/reference/overview-api"

[project.optional-dependencies]
dev = [
    "ruff~=0.8",
    "vulture~=2.11",
    "coverage~=7.6",
    "mypy~=1.11",
    "pytest~=8.0",
    "PyHamcrest~=2.1",
    "requests-mock~=1.12",
    "respx~=0.22",
]

[project.scripts]
threatray-mcp = "threatray_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/threatray_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/threatray_mcp", "README.md", "CHANGELOG.md", "pyproject.toml"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "PLC",   # pylint convention
    "PLE",   # pylint error
    "PLR",   # pylint refactor
    "PLW",   # pylint warning
    "RUF",   # Ruff-specific rules
]

ignore = [
    "PLR2004",  # magic value comparison
    "RUF012",   # mutable-class-default
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]
"vulture_whitelist.py" = ["ALL"]

[tool.ruff.lint.pylint]
max-args = 6
max-branches = 12
max-returns = 6
max-statements = 50
max-nested-blocks = 5
max-public-methods = 20

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
warn_return_any = true
warn_unused_configs = true
